GNOME Bugzilla – Bug 788711
omx: also reset nTimeStamp when re-using buffers
Last modified: 2017-10-18 06:59:01 UTC
.
Created attachment 361179 [details] [review] omx: factor out gst_omx_buffer_reset()
Created attachment 361180 [details] [review] omx: also reset nTimeStamp when re-using buffers Some OMX implementations may check if the timestamp of the output buffers they receive is actually not set.
Review of attachment 361179 [details] [review]: Good.
Review of attachment 361180 [details] [review]: Looks safe.
Attachment 361179 [details] pushed as 5146995 - omx: factor out gst_omx_buffer_reset() Attachment 361180 [details] pushed as b317314 - omx: also reset nTimeStamp when re-using buffers
gcc (Raspbian 6.3.0-18+rpi1) 6.3.0 20170516 Raspberry Pi3 I failed to build today. gstomx.c: In function ‘gst_omx_buffer_reset’: gstomx.c:234:28: error: incompatible types when assigning to type ‘OMX_TICKS {aka struct OMX_TICKS}’ from type ‘int’ buf->omx_buf->nTimeStamp = 0;
This is fixed by bug #789052 but the patch hasn't been merged yet.