omx: factor out gst_omx_buffer_reset()

https://bugzilla.gnome.org/show_bug.cgi?id=788711